Character #5 Ice Rod SFX add-on

--- a/sounds.ini
+++ b/sounds.ini
@@ -1,5 +1,5 @@
 [sound-main]
-total=101
+total=102
 use-iceball-sfx = true
 use-new-ice-sfx = true
 player-use-npc-hammer-sfx = true
@@ -178,7 +178,6 @@ hidden=0
 [sound-34]
 name="Racoon"
 file="racoon.ogg"
-single-channel=1
 hidden=0
 
 [sound-35]
@@ -408,7 +407,6 @@ hidden=0
 [sound-79]
 name="Zelda Heart"
 file="zelda-heart.ogg"
-single-channel=1
 hidden=0
 
 [sound-80]
@@ -510,3 +508,7 @@ file="larry-die.ogg"
 [sound-101]
 name="Ludwig von Koopa Killed"
 file="ludwig-die.ogg"
+
+[sound-102]
+name="Zelda iceball shoot"
+file="zelda-ice.ogg"
