--- a/_Moondust Config Pack/music.ini
+++ b/_Moondust Config Pack/music.ini
@@ -1,6 +1,6 @@
 [music-main]
 total-world=17
-total-level=89
+total-level=90
 total-special=3
 level-custom-music-id=24
 world-custom-music-id=17
@@ -266,8 +266,8 @@ name="Just a melody"
 file="ap_just.xm"
 
 [level-music-46]
-name="Underwater Adventure"
-file="dt_u-w.xm"
+name="Underwater"
+file="rieha_-_underwater.xm"
 
 [level-music-47]
 name="SMB1 Underwater (Remixed by InfinityVas)"
@@ -422,8 +422,8 @@ name="Light From the Sky"
 file="light_from_the_sky.xm"
 
 [level-music-85]
-name="Epoxy Dreams"
-file="mpn-epx.xm"
+name="Nebulon Ranger"
+file="nebulon_ranger.xm"
 
 [level-music-86]
 name="Imaginary Friend"
@@ -440,3 +440,7 @@ file="jk_emotracking.xm"
 [level-music-89]
 name="Nimipaeivaelaulu"
 file="nimipaeivaelaulu.xm"
+
+[level-music-90]
+name="Spring Sun"
+file="spring_sun.xm"
