--- a/sounds.ini
+++ b/sounds.ini
@@ -1,5 +1,5 @@
 [sound-main]
-total=102
+total=103
 use-iceball-sfx = true
 use-new-ice-sfx = true
 player-use-npc-hammer-sfx = true
@@ -420,7 +420,7 @@ file="zelda-rupee.ogg"
 hidden=0
 
 [sound-82]
-name="Zelda Fire"
+name="Zelda Lamp"
 file="zelda-fire.ogg"
 hidden=0
 
@@ -512,3 +512,7 @@ file="ludwig-die.ogg"
 [sound-102]
 name="Zelda iceball shoot"
 file="zelda-ice.ogg"
+
+[sound-103]
+name="Zelda fireball shoot"
+file="zelda-fire-rod.ogg"
