--- a/music.ini
+++ b/music.ini
@@ -1,6 +1,6 @@
 [music-main]
 total-world=17
-total-level=90
+total-level=92
 total-special=3
 level-custom-music-id=24
 world-custom-music-id=17
@@ -30,8 +30,8 @@ name="Eternity"
 file="4mat_-_eternity.xm"
 
 [world-music-7]
-name="Gamer Demo"
-file="mrgdemen.xm"
+name="Plastic Plant"
+file="plastic_plant.xm"
 
 [world-music-8]
 name="Heidi #8"
@@ -444,3 +444,11 @@ file="nimipaeivaelaulu.xm"
 [level-music-90]
 name="Spring Sun"
 file="spring_sun.xm"
+
+[level-music-91]
+name="Snowballs"
+file="snowballs.xm"
+
+[level-music-92]
+name="Snowman"
+file="pearl_-_snowman.mod"
