--- a/gameinfo.ini
+++ b/gameinfo.ini
@@ -71,6 +71,6 @@ game-credit-46="Yave Yu"
 game-credit-47="Hello"
 game-credit-48="VGMusic"
 game-credit-49=""
-game-credit-50=""Finally, Mushroom Kingdom was"
+game-credit-50="\"Finally, Mushroom Kingdom was"
 game-credit-51="returned to peace by everyone's"
-game-credit-52="effort and battlings......""
+game-credit-52="effort and battlings......\""
