Update Objects and Music

--- a/music.ini
+++ b/music.ini
@@ -1,6 +1,6 @@
 [music-main]
 total-world=17
-total-level=97
+total-level=98
 total-special=3
 level-custom-music-id=24
 world-custom-music-id=17
@@ -458,8 +458,8 @@ name="Tidstap"
 file="enacostione_-_tidstap.xm"
 
 [level-music-94]
-name="Moonflower"
-file="moonflower_by_mathew_granma.xm"
+name="Good Luck"
+file="enacostione_-_good_luck.xm"
 
 [level-music-95]
 name="Fruktfats Pop"
@@ -472,3 +472,7 @@ file="emerald.xm"
 [level-music-97]
 name="Sapphire Eyes"
 file="sapphire_eyes.xm"
+
+[level-music-98]
+name="Desert"
+file="woutervl_desert.xm"
