--- a/music.ini
+++ b/music.ini
@@ -1,6 +1,6 @@
 [music-main]
 total-world=17
-total-level=98
+total-level=99
 total-special=3
 level-custom-music-id=24
 world-custom-music-id=17
@@ -434,8 +434,8 @@ name="Water Sky"
 file="watersky.xm"
 
 [level-music-88]
-name="Emotracking"
-file="jk_emotracking.xm"
+name="Bossa-ing Around"
+file="bossa-ing_around.s3m"
 
 [level-music-89]
 name="Nimipaeivaelaulu"
@@ -475,4 +475,8 @@ file="sapphire_eyes.xm"
 
 [level-music-98]
 name="Desert"
-file="woutervl_desert.xm"
+file="woutervl_desert.it"
+
+[level-music-99]
+name="Night Cutie"
+file="nightcutie.xm"
