More symbols and TTF Fonts

--- a/fonts/Message.font.ini
+++ b/fonts/Message.font.ini
@@ -1,11 +1,12 @@
 [font]
 name = "font-message"
-ttf-outlines = false
-ttf-fallback = "Resource Han Rounded CN Bold"
+ttf-size = 16
+ttf-fallback-1x = "GuanZhi 8px"
 tables = 1
 space-width = 17
 interletter-space = 2
 newline-offset = 18
+glyph-offset-x = -2
 
 [tables]
 table1="font-message.ini"
