--- a/editor.ini
+++ b/editor.ini
@@ -7,7 +7,7 @@
 ;icon = ID
 ;members = a1,a2,a3...aN
 ;blk/bgo/npcN-adj = Numpad Direction
-;blk/bgo/npcN-slope = Type (0-4, x¡Ù3)
+;blk/bgo/npcN-slope = Type (0-4, xâ‰ 3)
 ;blk/bgoN-width = Width (For Slopes)
 ;blk/bgoN-group = Group #
 
@@ -32,7 +32,7 @@ blk7-adj = 124
 blk9-adj = 23689
 blk10-adj = 12346789
 blk11-adj = 12478
-;Low Part
+;Lower Part
 blk12-adj = 689
 blk13-adj = 46789
 blk14-adj = 478
@@ -421,7 +421,6 @@ mus50-name = "Dragonfly"
 mus34-name = "Intro #2"
 mus65-name = "Gametune #1"
 mus27-name = "Halftime"
-mus96-name = "Emerald"
 
 [musfam-Set2]
 name = "Set 2"
