--- a/fonts/Message.font.ini
+++ b/fonts/Message.font.ini
@@ -1,7 +1,7 @@
 [font]
 name = "font-message"
 ttf-size = 16
-ttf-fallback-1x = "GuanZhi 8px"
+ttf-fallback-1x = "Chill Bitmap 7px"
 tables = 2
 space-width = 17
 interletter-space = 2
