--- a/fonts/UI.font.ini
+++ b/fonts/UI.font.ini
@@ -2,7 +2,7 @@
 name = "font-ui"
 ttf-outlines = true
 ttf-outlines-colour = 0x000070FF
-ttf-fallback-1x = "GuanZhi 8px"
+ttf-fallback-1x = "Chill Bitmap 7px"
 tables = 2
 space-width = 17
 interletter-space = 2
