--- a/fonts/overrides.ini
+++ b/fonts/overrides.ini
@@ -4,16 +4,13 @@
 4 = font-message
 
 [ttf-fonts]
-file1 = "ResourceHanRoundedCN-Bold.ttf"
+file1 = "Jingnanbobohei.ttf"
 file1-antialias = true
 file2 = "unifont-15.0.01.otf"
 file2-antialias = false
 file2-bitmap-size = 16
-file3 = "GuanZhi-8px.ttf"
+file3 = "ChillBitmap7x.ttf"
 file3-antialias = false
 file3-bitmap-size = 8
-file4 = "Boutique7x7.ttf"
+file4 = "NotoEmoji-Regular.ttf"
 file4-antialias = false
-file4-bitmap-size = 8
-file5 = "NotoEmoji-Regular.ttf"
-file5-antialias = false
