--- a/music.ini
+++ b/music.ini
@@ -1,6 +1,6 @@
 [music-main]
 total-world=17
-total-level=99
+total-level=102
 total-special=3
 level-custom-music-id=24
 world-custom-music-id=17
@@ -478,5 +478,17 @@ name="Desert"
 file="woutervl_desert.it"
 
 [level-music-99]
-name="Night Cutie"
-file="nightcutie.xm"
+name="Splinter"
+file="splinter.xm"
+
+[level-music-100]
+name="Flying in the Heaven"
+file="flyingit.xm"
+
+[level-music-101]
+name="Scene Zone"
+file="scenezone.xm"
+
+[level-music-102]
+name="Smurf Glasses"
+file="khzc-smurfglasses.xm"
