--- a/_Moondust Config Pack/items/blocks/block-21.ini
+++ b/_Moondust Config Pack/items/blocks/block-21.ini
@@ -1,8 +1,8 @@
 [block]
 image = "block-21.png"
-name = "Green pipe 3"
-group = "Super Mario Bros. 3"
-category = "Pipe"
+name = "Castle Stone Brick Single"
+group = "Indoors"
+category = "Castle"
 sizable = 0
 danger = 0
 collision = 1
