--- a/_Moondust Config Pack/items/blocks/block-23.ini
+++ b/_Moondust Config Pack/items/blocks/block-23.ini
@@ -1,8 +1,8 @@
 [block]
 image = "block-23.png"
-name = "Green pipe 3"
-group = "Super Mario Bros. 3"
-category = "Pipe"
+name = "Underground Block"
+group = "Indoors"
+category = "Special Blocks"
 sizable = 0
 danger = 0
 collision = 1
