--- a/_Moondust Config Pack/items/blocks/block-24.ini
+++ b/_Moondust Config Pack/items/blocks/block-24.ini
@@ -1,8 +1,8 @@
 [block]
 image = "block-24.png"
-name = "Green pipe 3"
-group = "Super Mario Bros. 3"
-category = "Pipe"
+name = "Castle Ground Block"
+group = "Indoors"
+category = "Special Blocks"
 sizable = 0
 danger = 0
 collision = 1
