--- a/_Moondust Config Pack/items/blocks/block-29.ini
+++ b/_Moondust Config Pack/items/blocks/block-29.ini
@@ -1,7 +1,7 @@
 [block]
 image = "block-29.png"
-name = "Castle block 3"
-group = "Super Mario Bros. 3"
+name = "Castle Brick Single"
+group = "Indoors"
 category = "Castle"
 sizable = 0
 danger = 0
