--- a/_Moondust Config Pack/items/blocks/block-30.ini
+++ b/_Moondust Config Pack/items/blocks/block-30.ini
@@ -1,8 +1,8 @@
 [block]
 image = "block-30.png"
-name = "Lava3 1"
-group = "Super Mario Bros. 3"
-category = "Lava blocks"
+name = "Lava Top 2"
+group = "Hazards"
+category = "Lava"
 sizable = 0
 danger = 4
 collision = 1
