--- a/_Moondust Config Pack/items/blocks/block-37.ini
+++ b/_Moondust Config Pack/items/blocks/block-37.ini
@@ -1,8 +1,8 @@
 [block]
 image = "block-37.png"
-name = "Orange pipe 3"
-group = "Super Mario Bros. 3"
-category = "Pipe"
+name = "Haunted House Dirt"
+group = "Indoors"
+category = "Haunted House"
 sizable = 0
 danger = 0
 collision = 1
