--- a/_Moondust Config Pack/items/blocks/block-38.ini
+++ b/_Moondust Config Pack/items/blocks/block-38.ini
@@ -1,8 +1,8 @@
 [block]
 image = "block-38.png"
-name = "Green hill"
-group = "Super Mario Bros. 2"
-category = "Sizable Blocks"
+name = "Grassland-1 Sizable"
+group = "Outdoors"
+category = "Grassland"
 sizable = 1
 danger = 0
 collision = 2
