--- a/_Moondust Config Pack/items/blocks/block-42.ini
+++ b/_Moondust Config Pack/items/blocks/block-42.ini
@@ -1,8 +1,8 @@
 [block]
 image = "block-42.png"
-name = "Wooden log 1"
-group = "Super Mario Bros. 2"
-category = "Wood"
+name = "Castle Stone 1 4"
+group = "Indoors"
+category = "Castle"
 sizable = 0
 danger = 0
 collision = 1
