--- a/_Moondust Config Pack/items/npc/npc-104.ini
+++ b/_Moondust Config Pack/items/npc/npc-104.ini
@@ -1,8 +1,8 @@
 [npc]
-name = "Wood Platform"
+name = "Wooden Rail Lift"
 group = "Items"
 category = "Platform"
-description  = "A moving platform that moves along <b>line guides</b>."
+description  = "A moving lift that moves along <b>line guides</b>."
 image = "npc-104.png"
 algorithm = "platform.lua"
 default-effect = 10
