--- a/_Moondust Config Pack/items/npc/npc-105.ini
+++ b/_Moondust Config Pack/items/npc/npc-105.ini
@@ -1,8 +1,8 @@
 [npc]
-name = "Lift Platform"
-group = "Super Mario World"
-category = "Platforms"
-description  = "A moving platform that sinks when the player stands on it."
+name = "Flimsy Lift"
+group = "Items"
+category = "Platform"
+description  = "A moving lift that sinks when the player stands on it."
 image = "npc-105.png"
 algorithm = ""
 default-effect = 10
