--- a/_Moondust Config Pack/items/npc/npc-106.ini
+++ b/_Moondust Config Pack/items/npc/npc-106.ini
@@ -1,9 +1,9 @@
 [npc]
 name = "Elevator"
-group = "Super Mario Bros."
-category = "Platforms"
+group = "Items"
+category = "Platform"
 image = "npc-106.png"
-description  = "A moving platform that moves vertically."
+description  = "A moving lift that moves vertically."
 algorithm = "elevator.lua"
 default-effect = 10
 shell-effect = 10
