--- a/_Moondust Config Pack/items/npc/npc-276.ini
+++ b/_Moondust Config Pack/items/npc/npc-276.ini
@@ -1,6 +1,6 @@
 [npc]
-name = "Volcano Lotus Fireball"
-group = "The Lakitus are throwing Lakitus!"
+name = "Volcano Plant Fireball"
+group = "Special"
 category = "Bullet"
 description = "A projectile that slowly sinks."
 image = "npc-276.png"
