--- a/_Moondust Config Pack/items/npc/npc-62.ini
+++ b/_Moondust Config Pack/items/npc/npc-62.ini
@@ -1,9 +1,9 @@
 [npc]
-name = "Platform (Blue)"
-group = "Super Mario World"
-category = "Platforms"
+name = "Rail Lift (Blue)"
+group = "Items"
+category = "Platform"
 image = "npc-62.png"
-description = "A semisolid platform that moves on lineguides. Whether or not it moves is linked to <b>Blue Switch Blocks</b>."
+description = "A semisolid lift that moves on lineguides. Whether or not it moves is linked to <b>Blue Switch Blocks</b>."
 algorithm = ""
 default-effect = 10
 shell-effect = 10
