--- a/_Moondust Config Pack/items/npc/npc-64.ini
+++ b/_Moondust Config Pack/items/npc/npc-64.ini
@@ -1,8 +1,8 @@
 [npc]
-name = "Platform (Green)"
-group = "Super Mario World"
-category = "Platforms"
-description = "A semisolid platform that moves on lineguides. Whether or not it moves is linked to <b>Green Switch Blocks</b>."
+name = "Rail Lift (Green)"
+group = "Items"
+category = "Platform"
+description = "A semisolid lift that moves on lineguides. Whether or not it moves is linked to <b>Green Switch Blocks</b>."
 image = "npc-64.png"
 algorithm = ""
 default-effect = 10
