--- a/_Moondust Config Pack/music.ini
+++ b/_Moondust Config Pack/music.ini
@@ -1,6 +1,6 @@
 [music-main]
 total-world=17
-total-level=98
+total-level=102
 total-special=3
 level-custom-music-id=24
 world-custom-music-id=17
@@ -211,7 +211,7 @@ file="groove_du_monde.mod"
 
 [level-music-32]
 name="Rigit Obstacles"
-file="rigit_obstacles.mod"
+file="interference_ending.mod"
 
 [level-music-33]
 name="Sirens"
@@ -476,3 +476,19 @@ file="sapphire_eyes.xm"
 [level-music-98]
 name="Desert"
 file="woutervl_desert.it"
+
+[level-music-99]
+name="Splinter"
+file="splinter.xm"
+
+[level-music-100]
+name="Flying in the Heaven"
+file="flyingit.xm"
+
+[level-music-101]
+name="Scene Zone"
+file="scenezone.xm"
+
+[level-music-102]
+name="Smurf Glasses"
+file="khzc-smurfglasses.xm"
