--- a/_Moondust Config Pack/items/blocks/block-28.ini
+++ b/_Moondust Config Pack/items/blocks/block-28.ini
@@ -1,8 +1,8 @@
 [block]
 image = "block-28.png"
-name = "Big block"
-group = "Super Mario Bros. 3"
-category = "Sizable Blocks"
+name = "Yellow Block"
+group = "Outdoors"
+category = "Sizable"
 sizable = 1
 danger = 0
 collision = 2
