--- a/_Moondust Config Pack/items/blocks/block-31.ini
+++ b/_Moondust Config Pack/items/blocks/block-31.ini
@@ -1,8 +1,8 @@
 [block]
 image = "block-31.png"
-name = "Small pipe"
-group = "Super Mario Bros. 3"
-category = "Pipe"
+name = "Mushroom Platform 4"
+group = "Platforms"
+category = "Mushroom"
 sizable = 0
 danger = 0
 collision = 1
