--- a/_Moondust Config Pack/items/blocks/block-40.ini
+++ b/_Moondust Config Pack/items/blocks/block-40.ini
@@ -1,8 +1,8 @@
 [block]
 image = "block-40.png"
-name = "Ground2 2"
-group = "Super Mario Bros. 2"
-category = "Grass and ground 2"
+name = "Castle Stone 1 2"
+group = "Indoors"
+category = "Castle"
 sizable = 0
 danger = 0
 collision = 1
