--- a/_Moondust Config Pack/items/npc/npc-138.ini
+++ b/_Moondust Config Pack/items/npc/npc-138.ini
@@ -1,5 +1,5 @@
 [npc]
-name = "Coin (Green)"
+name = "Coin (Gold, For Character #4)"
 group = "Items"
 category = "Coin"
 description = "Collect 100 to get an <b>extra life</b>."
