--- a/_Moondust Config Pack/items/npc/npc-66.ini
+++ b/_Moondust Config Pack/items/npc/npc-66.ini
@@ -1,8 +1,8 @@
 [npc]
-name = "Platform (Red)"
-group = "Super Mario World"
-category = "Platforms"
-description = "A semisolid platform that moves on lineguides. Whether or not it moves is linked to <b>Red Switch Blocks</b>."
+name = "Rail Lift (Red)"
+group = "Items"
+category = "Platform"
+description = "A semisolid lift that moves on lineguides. Whether or not it moves is linked to <b>Red Switch Blocks</b>."
 image = "npc-66.png"
 algorithm = ""
 default-effect = 10
