--- a/_Moondust Config Pack/items/npc/npc-88.ini
+++ b/_Moondust Config Pack/items/npc/npc-88.ini
@@ -1,5 +1,5 @@
 [npc]
-name = "Coin (Gold, for castles)"
+name = "Coin (Gold, For castles)"
 group = "Items"
 category = "Coin"
 description = "Collect 100 to get an <b>extra life</b>."
