--- a/_Moondust Config Pack/items/bgo/background-100.ini
+++ b/_Moondust Config Pack/items/bgo/background-100.ini
@@ -1,8 +1,9 @@
 [background]
 image = "background-100.png"
-name = "SMB3 Rail Lift Buffer"
-group = "Super Mario Bros. 3"
-category = "Platform path"
+name = "Track End 2"
+group = "Track"
+category = "Track End"
+description = "A track end tile, which makes track-based NPC's move to opposite direction."
 grid = 16
 z-layer = "background"
 animated = 1
