--- a/_Moondust Config Pack/items/bgo/background-151.ini
+++ b/_Moondust Config Pack/items/bgo/background-151.ini
@@ -1,7 +1,8 @@
 [background]
 image = "background-151.png"
-name = "Crateria Mushroom 2"
-group = "Miscellaneous"
-category = "Metroid"
+name = "Vine 1"
+group = "Forest"
+category = "Plants"
+description = "A vine tile that grown in the forest."
 z-layer = "background"
 smbx64-sort-priority = 75
