--- a/_Moondust Config Pack/items/bgo/background-71.ini
+++ b/_Moondust Config Pack/items/bgo/background-71.ini
@@ -1,8 +1,9 @@
 [background]
 image = "background-71.png"
-name = "Horizontal Rail"
-group = "Super Mario World"
-category = "Platform path"
+name = "Horizontal Track"
+group = "Track"
+category = "Track Path"
+description = "A horizontal track tile, which makes track-based NPC's move horizontally."
 grid = 16
 z-layer = "background"
 z-offset = 0.04
