--- a/_Moondust Config Pack/items/bgo/background-72.ini
+++ b/_Moondust Config Pack/items/bgo/background-72.ini
@@ -1,8 +1,9 @@
 [background]
 image = "background-72.png"
-name = "Vertical Rail"
-group = "Super Mario World"
-category = "Platform path"
+name = "Vertical Track"
+group = "Track"
+category = "Track Path"
+description = "A vertical track tile, which makes track-based NPC's move horizontally."
 grid = 16
 z-layer = "background"
 z-offset = 0.04
