--- a/_Moondust Config Pack/items/bgo/background-73.ini
+++ b/_Moondust Config Pack/items/bgo/background-73.ini
@@ -1,8 +1,9 @@
 [background]
 image = "background-73.png"
-name = "45* Right Rail"
-group = "Super Mario World"
-category = "Platform path"
+name = "45* Right Track"
+group = "Track"
+category = "Track Path"
+description = "A right diagonal track tile, which makes track-based NPC's move diagonally."
 grid = 16
 z-layer = "background"
 z-offset = 0.04
