--- a/_Moondust Config Pack/items/npc/npc-104.ini
+++ b/_Moondust Config Pack/items/npc/npc-104.ini
@@ -2,7 +2,7 @@
 name = "Rail Lift"
 group = "Items"
 category = "Platform"
-description  = "A lift that moves along <b>line guides</b>."
+description  = "A lift that moves along <b>tracks</b>."
 image = "npc-104.png"
 algorithm = "platform.lua"
 default-effect = 10
