--- a/_Moondust Config Pack/items/npc/npc-179.ini
+++ b/_Moondust Config Pack/items/npc/npc-179.ini
@@ -1,8 +1,8 @@
 [npc]
 name = "Grinder"
-group = "Super Mario World"
-category = "Enemy"
-description = "A spiky enemy that moves along <b>line guides</b>."
+group = "Enemies"
+category = "Castle"
+description = "A spiky enemy that moves along <b>tracks</b>."
 image = "npc-179.png"
 algorithm = ""
 default-effect = 99
