--- a/_Moondust Config Pack/items/npc/npc-60.ini
+++ b/_Moondust Config Pack/items/npc/npc-60.ini
@@ -2,7 +2,7 @@
 name = "Rail Lift (Yellow)"
 group = "Items"
 category = "Platform"
-description = "A semisolid lift that moves on lineguides. Whether or not it moves is linked to <b>Yellow Switch Blocks</b>."
+description = "A semisolid lift that moves on tracks. Whether or not it moves is linked to <b>Yellow Switch Blocks</b>."
 image = "npc-60.png"
 algorithm = ""
 default-effect = 10
