--- a/_Moondust Config Pack/items/npc/npc-62.ini
+++ b/_Moondust Config Pack/items/npc/npc-62.ini
@@ -3,7 +3,7 @@ name = "Rail Lift (Blue)"
 group = "Items"
 category = "Platform"
 image = "npc-62.png"
-description = "A semisolid lift that moves on lineguides. Whether or not it moves is linked to <b>Blue Switch Blocks</b>."
+description = "A semisolid lift that moves on tracks. Whether or not it moves is linked to <b>Blue Switch Blocks</b>."
 algorithm = ""
 default-effect = 10
 shell-effect = 10
