--- a/_Moondust Config Pack/items/npc/npc-64.ini
+++ b/_Moondust Config Pack/items/npc/npc-64.ini
@@ -2,7 +2,7 @@
 name = "Rail Lift (Green)"
 group = "Items"
 category = "Platform"
-description = "A semisolid lift that moves on lineguides. Whether or not it moves is linked to <b>Green Switch Blocks</b>."
+description = "A semisolid lift that moves on tracks. Whether or not it moves is linked to <b>Green Switch Blocks</b>."
 image = "npc-64.png"
 algorithm = ""
 default-effect = 10
