--- a/_Moondust Config Pack/tilesets/Decor-Track.tileset.ini
+++ b/_Moondust Config Pack/tilesets/Decor-Track.tileset.ini
@@ -1,17 +1,8 @@
 [tileset]
 rows=2
 cols=4
-name=Line Guide
+name=Track
 type=1
-
-[item-2-0]
-id=73
-
-[item-3-0]
-id=74
-
-[item-1-0]
-id=71
 
 [item-0-0]
 id=72
@@ -19,5 +10,14 @@ id=72
 [item-0-1]
 id=70
 
+[item-1-0]
+id=71
+
 [item-1-1]
 id=100
+
+[item-2-0]
+id=73
+
+[item-3-0]
+id=74
