--- a/_Moondust Config Pack/group_tilesets/LevelDecor.tsgrp.ini
+++ b/_Moondust Config Pack/group_tilesets/LevelDecor.tsgrp.ini
@@ -21,7 +21,7 @@ tileset-13=Decor-Platforms.tileset.ini
 tileset-14=Decor-Fills.tileset.ini
 tileset-15=Decor-Water.tileset.ini
 tileset-16=Decor-BlackExit.tileset.ini
-tileset-17=Decor-LineGuide.tileset.ini
+tileset-17=Decor-Track.tileset.ini
 tileset-18=Decor-OnOff.tileset.ini
 tileset-19=Decor-TimedSwitch.tileset.ini
 tileset-20=Decor-Door.tileset.ini
