--- a/_Moondust Config Pack/items/bgo/background-1.ini
+++ b/_Moondust Config Pack/items/bgo/background-1.ini
@@ -1,8 +1,8 @@
 [background]
 image = "background-1.png"
-name = "Small Bush"
-group = "Super Mario Bros. 3"
-category = "Greens"
+name = "Bush"
+group = "Forest"
+category = "Plants"
 z-layer = "background"
 z-offset = 0.02
 smbx64-sort-priority = 77
