--- a/_Moondust Config Pack/items/bgo/background-70.ini
+++ b/_Moondust Config Pack/items/bgo/background-70.ini
@@ -1,8 +1,9 @@
 [background]
 image = "background-70.png"
-name = "SMW Rail Lift Buffer"
-group = "Super Mario World"
-category = "Platform path"
+name = "Track End"
+group = "Track"
+category = "Track End"
+description = "A track end tile, which makes track-based NPC's move to opposite direction."
 grid = 16
 z-layer = "background"
 z-offset = 0.04
