--- a/_Moondust Config Pack/items/npc/npc-144.ini
+++ b/_Moondust Config Pack/items/npc/npc-144.ini
@@ -3,7 +3,7 @@ name = "Vegetable (Turnip Sprout)"
 group = "Items"
 category = "Vegetable"
 image = "npc-144.png"
-description = "An item commonly found buried in <b>Grass (Container)<b>. When thrown it will no longer collide with solid objects, but still take out enemies in its path. When <b>Link</b> slashes it with his sword, it will turn into <b>Rupees</b>."
+description = "An item commonly found buried in <b>Grass (Container)</b>. When thrown it will no longer collide with solid objects, but still take out enemies in its path. When <b>Link</b> slashes it with his sword, it will turn into <b>Rupees</b>."
 algorithm = ""
 default-effect = 10
 shell-effect = 10
