--- a/_Moondust Config Pack/items/backgrounds/background2-40.ini
+++ b/_Moondust Config Pack/items/backgrounds/background2-40.ini
@@ -1,7 +1,7 @@
 [background2]
 legacy = true
 image = "background2-40.png"
-name = "(Reserved)"
+name = "Alternate Dimension"
 type = "single-row"
 repeat-h = 2
 repeat-v = "NR"
