--- a/_Moondust Config Pack/items/backgrounds/background2-56.ini
+++ b/_Moondust Config Pack/items/backgrounds/background2-56.ini
@@ -1,7 +1,7 @@
 [background2]
 legacy = true
 image = "background2-56.png"
-name = "(Reserved)"
+name = "Underwater 2"
 type = "single-row"
 repeat-h = 2
 repeat-v = "NR"
