--- a/gameinfo.ini
+++ b/gameinfo.ini
@@ -71,6 +71,10 @@ game-credit-46="Yave Yu"
 game-credit-47="Hello"
 game-credit-48="VGMusic"
 game-credit-49=""
-game-credit-50="\"Finally, Mushroom Kingdom was"
-game-credit-51="returned to peace by everyone's"
-game-credit-52="effort and battlings......\""
+game-credit-50="Special Thanks:"
+game-credit-51=""
+game-credit-52="Skullgamer205"
+game-credit-53=""
+game-credit-54="\"Finally, Mushroom Kingdom was"
+game-credit-55="returned to peace by everyone's"
+game-credit-56="effort and battlings......\""
