--- a/gameinfo.ini
+++ b/gameinfo.ini
@@ -74,7 +74,8 @@ game-credit-49=""
 game-credit-50="Special Thanks:"
 game-credit-51=""
 game-credit-52="Skullgamer205"
-game-credit-53=""
-game-credit-54="\"Finally, Mushroom Kingdom was"
-game-credit-55="returned to peace by everyone's"
-game-credit-56="effort and battlings......\""
+game-credit-53="Wohlstand"
+game-credit-54=""
+game-credit-55="\"Finally, Mushroom Kingdom was"
+game-credit-56="returned to peace by everyone's"
+game-credit-57="effort and battlings......\""
