--- a/editor.ini
+++ b/editor.ini
@@ -11,6 +11,34 @@
 ;blk/bgoN-width = Width (For Slopes)
 ;blk/bgoN-group = Group #
 
+;[bg2fam/musfam/wmusfam/sndfam-name]
+;name = "Group Name"
+;members = a1,a2,a3...aN
+;sort-index = 1
+;bg2-N/sndN/musN/wmusN-name = "Name"
+
+;[tilefam-name]
+;name = "Group Name"
+;category = 1
+;tileN-adj = Numpad Direction
+;members = a1,a2,a3...aN
+;podN-members = a1,a2,a3...aN
+;podN-width = Width
+
+;Exit Types
+
+[exit-codes]
+any = "Any Type"
+none = "None"
+code1 = "Roulette"
+code2 = "Orb"
+code3 = "Offscreen"
+code4 = "Key"
+code5 = "Crystal Ball"
+code6 = "Warp"
+code7 = "Collect"
+code8 = "Goal Bar"
+
 ;Blocks
 
 [blkfam-StandardBlocks]
@@ -372,12 +400,13 @@ bg2-50-name = "Mushrooms"
 [bg2fam-Others]
 name = "Others"
 sort-index = 11
-members = 17,44,58,39,52
+members = 17,44,58,39,52,40
 bg2-17-name = "Bonus"
 bg2-44-name = "City"
 bg2-58-name = "City (N)"
 bg2-39-name = "Countryside"
 bg2-52-name = "Countryside (N)"
+bg2-40-name = "Alt. Dimension"
 
 ;Music
 
@@ -394,44 +423,151 @@ mus25-name = "Underground 3"
 mus52-name = "Underground 4"
 mus47-name = "Underwater"
 mus3-name = "Castle"
-mus6-name = "Boss"
-mus21-name = "Last Boss"
+mus6-name = "Battle"
+mus21-name = "Final Battle"
 
 [musfam-Set1]
 name = "Set 1"
 sort-index = 2
-members = 8,10,12,17,18,23,30,63,26,89,43,44,46,60,85,50,34,65,27,96
-mus8-name = "Broken Heart"
-mus10-name = "Whistling Fred"
-mus12-name = "Heidi #7"
-mus17-name = "Heretic"
-mus18-name = "Happy Summer"
-mus23-name = "Five"
-mus30-name = "C. Design"
-mus63-name = "Orion"
-mus26-name = "Orion 2"
-mus89-name = "Nimipaeivaelau."
-mus43-name = "Flower Girl"
-mus44-name = "Palace"
-mus46-name = "Underwater"
-mus60-name = "Moon Flight"
-mus85-name = "Nebulon Ranger"
-mus96-name = "Emerald"
-mus50-name = "Dragonfly"
-mus34-name = "Intro #2"
-mus65-name = "Gametune #1"
-mus27-name = "Halftime"
+mus5-name = "Normal 1"
+mus8-name = "Normal 2"
+mus2-name = "Athletic 1"
+mus16-name = "Athletic 2"
+mus18-name = "Beach 1"
+mus12-name = "Under 1"
+mus17-name = "Under 2"
+mus30-name = "Race 1"
+mus14-name = "Bonus 1"
+mus20-name = "Dance 1"
+mus28-name = "Igloo 1"
+mus83-name = "Castle 1"
+mus63-name = "Space 1"
+mus15-name = "Battle 1"
+mus23-name = "Battle 2"
 
 [musfam-Set2]
 name = "Set 2"
 sort-index = 3
+mus19-name = "Normal 3"
+mus50-name = "Normal 4"
+mus42-name = "Athletic 3"
+mus31-name = "Groove"
+mus27-name = "Rest Room 1"
+mus67-name = "Interference 1"
+mus32-name = "Fast Run 1"
+mus33-name = "Fast Run 2"
+mus29-name = "Forest 1"
+mus82-name = "Forest 2"
+mus46-name = "Water 1"
+mus48-name = "Water 2"
+mus36-name = "Minigame 1"
+mus26-name = "Space 2"
+mus41-name = "Battle 3"
 
 [musfam-Set3]
 name = "Set 3"
 sort-index = 4
-mus5-name = "Analysis"
-mus2-name = "Sinus"
-mus16-name = "Woodshoes"
-mus70-name = "Snowfall"
-mus66-name = "Coffee"
-mus94-name = "Moonflower"
+mus39-name = "Normal 5"
+mus54-name = "Normal 6"
+mus35-name = "Snow 1"
+mus70-name = "Snow 2"
+mus60-name = "Night 1"
+mus38-name = "Night 2"
+mus53-name = "Dance 2"
+mus58-name = "Dance 3"
+mus59-name = "Dream 1"
+mus44-name = "Athletic 4"
+mus49-name = "Water 3"
+mus55-name = "Minigame 2"
+mus51-name = "Waterfall 1"
+mus56-name = "Beach 2"
+mus57-name = "Mine Cave 1"
+
+[musfam-Set4]
+name = "Set 4"
+sort-index = 5
+mus22-name = "Normal 7"
+mus34-name = "Interference 2"
+mus62-name = "Calm 1"
+mus75-name = "Calm 2"
+mus64-name = "Dance 4"
+mus65-name = "Minigame 3"
+mus78-name = "City 1"
+mus66-name = "City 2"
+mus61-name = "Sky 1"
+mus69-name = "Monochrome 1"
+mus79-name = "Stardust 1"
+mus71-name = "Stardust 2"
+mus37-name = "Race 2"
+mus73-name = "Race 3"
+mus68-name = "Battle 4"
+
+[musfam-Set5]
+name = "Set 5"
+sort-index = 6
+mus74-name = "Normal 8"
+mus77-name = "Normal 9"
+mus81-name = "Normal 10"
+mus86-name = "Normal 11"
+mus76-name = "Forest 3"
+mus93-name = "Town 1"
+mus80-name = "Bonus 2"
+mus88-name = "Bonus 3"
+mus72-name = "Dream 2"
+mus84-name = "Under 3"
+mus91-name = "Snow 3"
+mus92-name = "Snow 4"
+mus85-name = "Castle 2"
+mus87-name = "Water 4"
+mus89-name = "Battle 5"
+
+[musfam-Set6]
+name = "Set 6"
+sort-index = 7
+mus90-name = "Normal 12"
+mus95-name = "Normal 13"
+mus96-name = "Normal 14"
+mus102-name = "Normal 15"
+mus94-name = "Town 2"
+mus97-name = "Dance 5"
+mus98-name = "Sand 1"
+mus99-name = "Calm 3"
+mus100-name = "Colours"
+mus101-name = "Interference 3"
+mus40-name = "Ship 1"
+mus106-name = "Ship 2"
+
+[musfam-Set7]
+name = "Set 7"
+sort-index = 8
+
+[wmusfam-Standard]
+name = "Standard"
+sort-index = 1
+members = 1,9,2
+wmus1-name = "Normal"
+wmus9-name = "Indoors"
+wmus2-name = "Bonus"
+
+[wmusfam-Set1]
+name = "Set 1"
+sort-index = 2
+members = 6,11,4,3,5,7,10,12
+wmus11-name = "Normal"
+wmus6-name = "Grassland"
+wmus4-name = "Forever 1"
+wmus3-name = "Forever 2"
+wmus5-name = "Industrial 1"
+wmus7-name = "Industrial 2"
+wmus10-name = "Seaside"
+wmus12-name = "Bonus"
+
+[wmusfam-Set2]
+name = "Set 2"
+sort-index = 2
+members = 8,13,14,15,16
+wmus8-name = "Dark World"
+wmus13-name = "Dreams"
+wmus14-name = "Sky"
+wmus15-name = "Dance"
+wmus16-name = "Classic"
