--- a/fonts/StatusBar.font.ini
+++ b/fonts/StatusBar.font.ini
@@ -1,12 +1,13 @@
 [font]
-name = "font-worldmap"
+name = "font-statusbar"
 ttf-outlines = true
 ttf-outlines-colour = 0x000070FF
 ttf-fallback-1x = "Chill Bitmap 7px"
+glyph-offset-y = -1
 tables = 2
-space-width = 16
-interletter-space = 0
-newline-offset = 16
+space-width = 17
+interletter-space = 2
+newline-offset = 18
 
 [tables]
 table1="font-normal.ini"
