--- a/music.ini
+++ b/music.ini
@@ -1,6 +1,6 @@
 [music-main]
 total-world=17
-total-level=102
+total-level=111
 total-special=3
 level-custom-music-id=24
 world-custom-music-id=17
@@ -22,8 +22,8 @@ name="Riot-11"
 file="riot-11.mod"
 
 [world-music-5]
-name="End of the beginning"
-file="pk_lz0_07.xm"
+name="No Chemtrails Today"
+file="jazzcat_-_no_chemtrails_today.xm"
 
 [world-music-6]
 name="Eternity"
@@ -38,8 +38,8 @@ name="Heidi #8"
 file="heidi8.xm"
 
 [world-music-9]
-name="Dark Planet"
-file="dark_planet.mod"
+name="VLDC8 Map Cave"
+file="MAP - Cave.spc|0;g=1.8"
 
 [world-music-10]
 name="Club Atlantique"
@@ -390,7 +390,7 @@ name="Treetops"
 file="treetops.xm"
 
 [level-music-77]
-name="Tlt Story 4"
+name="T. Story 4"
 file="toilet4.xm"
 
 [level-music-78]
@@ -462,8 +462,8 @@ name="Good Luck"
 file="enacostione_-_good_luck.xm"
 
 [level-music-95]
-name="Fruktfats Pop"
-file="m-fp.xm"
+name="Saskatchewan"
+file="radix_and_loonie_-_saskatchewan.xm"
 
 [level-music-96]
 name="Emerald"
@@ -487,8 +487,44 @@ file="meztli_blue_-_a_new_colour.it"
 
 [level-music-101]
 name="Scene Zone"
-file="scenezone.xm"
+file="scenezone-edit.xm"
 
 [level-music-102]
 name="Smurf Glasses"
 file="khzc-smurfglasses.xm"
+
+[level-music-103]
+name="Chipo Five"
+file="darkman007_-_chipo_five.it"
+
+[level-music-104]
+name="Naked Hand"
+file="naked_hand.xm"
+
+[level-music-105]
+name="Abbey Road"
+file="abbey_road.xm"
+
+[level-music-106]
+name="The Loneliness"
+file="the_loneliness.mod"
+
+[level-music-107]
+name="World-Like Music"
+file="ida_smwmusic.it"
+
+[level-music-108]
+name="Happy Synth"
+file="happy_synthz.s3m"
+
+[level-music-109]
+name="Overworld"
+file="overworld.mod"
+
+[level-music-110]
+name="Fallen Sides"
+file="sil_falsid-loop.xm"
+
+[level-music-111]
+name="Spinning Around"
+file="sc2-smp.it"
