--- a/_Moondust Config Pack/group_tilesets/LevelDecor.tsgrp.ini
+++ b/_Moondust Config Pack/group_tilesets/LevelDecor.tsgrp.ini
@@ -2,7 +2,7 @@
 category=Level Tiles
 name=Decoration
 weight=3
-tilesets-count=21
+tilesets-count=22
 
 [tilesets]
 tileset-1=Decor-Grassland.tileset.ini
@@ -25,4 +25,5 @@ tileset-17=Decor-Track.tileset.ini
 tileset-18=Decor-OnOff.tileset.ini
 tileset-19=Decor-TimedSwitch.tileset.ini
 tileset-20=Decor-Door.tileset.ini
-tileset-21=Decor-Walls.tileset.ini
+tileset-21=Decor-BlockAssist.tileset.ini
+tileset-22=Decor-Walls.tileset.ini
