--- a/_Moondust Config Pack/items/bgo/background-156.ini
+++ b/_Moondust Config Pack/items/bgo/background-156.ini
@@ -1,8 +1,8 @@
 [background]
-image = "background-156.png"
-name = "Mother Brain's Wires 3"
-group = "Miscellaneous"
-category = "Metroid"
-offset-y = 16
+image = "background-156e.png"
+name = "Stone Ball (Assist)"
+group = "Block Assist"
+category = "Inside Walls"
+description = "A Stone Ball Block which meant to be placed inside blocks. Use block-630 to place them as a standalone block."
 z-layer = "foreground"
 smbx64-sort-priority = 125
