--- a/_Moondust Config Pack/items/blocks/block-180.ini
+++ b/_Moondust Config Pack/items/blocks/block-180.ini
@@ -1,8 +1,8 @@
 [block]
 image = "block-180.png"
-name = "Red switchable"
-group = "Super Mario World"
-category = "Switchable"
+name = "Switch Block (Red, Enabled)"
+group = "General Blocks"
+category = "Switch Blocks"
 sizable = 0
 danger = 0
 collision = 1
