--- a/_Moondust Config Pack/items/blocks/block-181.ini
+++ b/_Moondust Config Pack/items/blocks/block-181.ini
@@ -1,8 +1,8 @@
 [block]
 image = "block-181.png"
-name = "Red switchable disabled"
-group = "Super Mario World"
-category = "Switchable"
+name = "Switch Block (Red, Disabled)"
+group = "General Blocks"
+category = "Switch Blocks"
 sizable = 0
 danger = 0
 collision = 0
