--- a/editor.ini
+++ b/editor.ini
@@ -47,8 +47,8 @@ category = 1
 icon = 1
 members = 1,92,4,22,5,2,90,88,89,224,225,226,59,61,60,23,65,93,188,24,193,192,695,696,697
 
-[blkfam-Grassland]
-name = "Grassland"
+[blkfam-Fields]
+name = "Fields"
 category = 2
 icon = 6
 members = 38
@@ -137,9 +137,9 @@ blk322-width = 4
 
 ;The following tilesets, except special blocks, reuses this layout.
 
-[blkfam-Plains]
-name = "Plains"
-category = 2
+[blkfam-Fields2]
+name = "Fields 2"
+category = 1
 members = 79
 
 blk80-adj = 236
@@ -196,6 +196,28 @@ blk303-width = 4
 blk304-adj = 1234689
 blk304-slope = 4
 blk304-width = 4
+
+[blkfam-Fields3]
+name = "Fields 3"
+category = 2
+members = 579
+
+blk665-adj = 236
+blk666-adj = 12346
+blk667-adj = 124
+
+blk668-adj = 23689
+blk669-adj = 12346789
+blk670-adj = 12478
+
+blk671-adj = 689
+blk672-adj = 46789
+blk673-adj = 478
+
+blk674-adj = 1234678
+blk675-adj = 1234689
+blk676-adj = 1246789
+blk677-adj = 2346789
 
 [blkfam-Pipe1]
 ;TheXTech doesn't support raw custom-sized blocks yet.
@@ -408,7 +430,7 @@ bg2-39-name = "Countryside"
 bg2-52-name = "Countryside (N)"
 bg2-40-name = "Alt. Dimension"
 
-;Music
+;Level Music
 
 [musfam-Standard]
 name = "Standard"
@@ -425,6 +447,8 @@ mus47-name = "Underwater"
 mus3-name = "Castle"
 mus6-name = "Battle"
 mus21-name = "Final Battle"
+
+; - Set # are Tracker Musics
 
 [musfam-Set1]
 name = "Set 1"
@@ -541,6 +565,8 @@ mus106-name = "Ship 2"
 name = "Set 7"
 sort-index = 8
 
+;World Music
+
 [wmusfam-Standard]
 name = "Standard"
 sort-index = 1
@@ -548,6 +574,8 @@ members = 1,9,2
 wmus1-name = "Normal"
 wmus9-name = "Indoors"
 wmus2-name = "Bonus"
+
+; - Set # are Tracker Musics
 
 [wmusfam-Set1]
 name = "Set 1"
@@ -564,10 +592,45 @@ wmus12-name = "Bonus"
 
 [wmusfam-Set2]
 name = "Set 2"
-sort-index = 2
+sort-index = 3
 members = 8,13,14,15,16
 wmus8-name = "Dark World"
 wmus13-name = "Dreams"
 wmus14-name = "Sky"
 wmus15-name = "Dance"
 wmus16-name = "Classic"
+
+;Sound Effects
+
+[sndfam-Player]
+name = "Player"
+sort-index = 1
+snd1-name = "Jump"
+;snd#-name = ""
+
+[sndfam-Object]
+name = "Objects"
+sort-index = 2
+
+[sndfam-Items]
+name = "Items"
+sort-index = 3
+snd14-name = "Coin"
+
+[sndfam-Enemy]
+name = "Enemy"
+sort-index = 4
+snd2-name = "Stomp"
+snd39-name = "Boss Hit"
+
+[sndfam-Hero]
+name = "Hero"
+sort-index = 5
+
+[sndfam-Fanfare]
+name = "Fanfares"
+sort-index = 6
+
+[sndfam-UI]
+name = "UI"
+sort-index = 7
