--- a/_Moondust Config Pack/items/blocks/block-170.ini
+++ b/_Moondust Config Pack/items/blocks/block-170.ini
@@ -1,8 +1,8 @@
 [block]
 image = "block-170.png"
-name = "Yellow switch"
-group = "Super Mario World"
-category = "Switchable"
+name = "Switch Block (Yellow)"
+group = "General Blocks"
+category = "Switch Blocks"
 sizable = 0
 danger = 0
 collision = 1
@@ -21,5 +21,6 @@ algorithm = 0
 animated = 1
 frames = 4
 frame-delay = 125
+display-frame = 1
 switch-button = 1
 switch-id = 4
