--- a/_Moondust Config Pack/items/blocks/block-171.ini
+++ b/_Moondust Config Pack/items/blocks/block-171.ini
@@ -1,8 +1,8 @@
 [block]
 image = "block-171.png"
-name = "Yellow switchable"
-group = "Super Mario World"
-category = "Switchable"
+name = "Switch Block (Yellow, Enabled)"
+group = "General Blocks"
+category = "Switch Blocks"
 sizable = 0
 danger = 0
 collision = 1
