--- a/_Moondust Config Pack/items/blocks/block-172.ini
+++ b/_Moondust Config Pack/items/blocks/block-172.ini
@@ -1,8 +1,8 @@
 [block]
 image = "block-172.png"
-name = "Yellow switchable disabled"
-group = "Super Mario World"
-category = "Switchable"
+name = "Switch Block (Yellow, Disabled)"
+group = "General Blocks"
+category = "Switch Blocks"
 sizable = 0
 danger = 0
 collision = 0
