--- a/_Moondust Config Pack/items/blocks/block-174.ini
+++ b/_Moondust Config Pack/items/blocks/block-174.ini
@@ -1,8 +1,8 @@
 [block]
 image = "block-174.png"
-name = "Blue switchable"
-group = "Super Mario World"
-category = "Switchable"
+name = "Switch Block (Blue, Enabled)"
+group = "General Blocks"
+category = "Switch Blocks"
 sizable = 0
 danger = 0
 collision = 1
