--- a/_Moondust Config Pack/items/blocks/block-175.ini
+++ b/_Moondust Config Pack/items/blocks/block-175.ini
@@ -1,8 +1,8 @@
 [block]
 image = "block-175.png"
-name = "Blue switchable disabled"
-group = "Super Mario World"
-category = "Switchable"
+name = "Switch Block (Blue, Disabled)"
+group = "General Blocks"
+category = "Switch Blocks"
 sizable = 0
 danger = 0
 collision = 0
