--- a/_Moondust Config Pack/items/blocks/block-177.ini
+++ b/_Moondust Config Pack/items/blocks/block-177.ini
@@ -1,8 +1,8 @@
 [block]
 image = "block-177.png"
-name = "Green switchable"
-group = "Super Mario World"
-category = "Switchable"
+name = "Switch Block (Green, Enabled)"
+group = "General Blocks"
+category = "Switch Blocks"
 sizable = 0
 danger = 0
 collision = 1
