--- a/_Moondust Config Pack/items/blocks/block-178.ini
+++ b/_Moondust Config Pack/items/blocks/block-178.ini
@@ -1,8 +1,8 @@
 [block]
 image = "block-178.png"
-name = "Green switchable disabled"
-group = "Super Mario World"
-category = "Switchable"
+name = "Switch Block (Blue, Disabled)"
+group = "General Blocks"
+category = "Switch Blocks"
 sizable = 0
 danger = 0
 collision = 0
