--- a/_Moondust Config Pack/items/blocks/block-630.ini
+++ b/_Moondust Config Pack/items/blocks/block-630.ini
@@ -3,6 +3,7 @@ image = "block-630.png"
 name = "Stone ball"
 group = "Super Mario Bros. 3"
 category = "Castle"
+description = "A Stone Ball Block. Use background-156 to place them inside blocks."
 sizable = 0
 danger = 0
 collision = 1
