--- a/_Moondust Config Pack/music.ini
+++ b/_Moondust Config Pack/music.ini
@@ -487,7 +487,7 @@ file="meztli_blue_-_a_new_colour.it"
 
 [level-music-101]
 name="Scene Zone"
-file="scenezone.xm"
+file="scenezone-edit.xm"
 
 [level-music-102]
 name="Smurf Glasses"
