--- a/gameinfo.ini
+++ b/gameinfo.ini
@@ -3,6 +3,9 @@ title="Nostalgic Paradise"
 disable-two-player = false
 disable-battle-mode = true
 
+[death-counter]
+enabled = false
+
 [characters]
 name1="Mario"
 name2="Luigi"
