--- a/gameinfo.ini
+++ b/gameinfo.ini
@@ -3,7 +3,7 @@ title="Nostalgic Paradise"
 disable-two-player = false
 disable-battle-mode = true
 
-[death-counter]
+[fails-counter]
 enabled = false
 
 [characters]
