--- a/_Moondust Config Pack/items/npc/npc-97.ini
+++ b/_Moondust Config Pack/items/npc/npc-97.ini
@@ -2,7 +2,7 @@
 name = "Power Star (Exit)"
 group = "Items"
 category = "Control"
-description = "Touch to beat the level. When a Power Star has been collected for the first time, it will increment the game's <u>Star Counter</u> by 1. (Exit Type 6) <br><br><i>Warning: There can only be one Power Star per section. Additional Power Stars will still beat the level, but not increment the <u>Star Counter</u>.<i>"
+description = "Touch to beat the level. When a Power Star has been collected for the first time, it will increment the game's <u>Star Counter</u> by 1. (Exit Type 6) <br><br><i>Warning: If Unique Star ID is set by 0 (by default), there can only be one Power Star per section. Additional Power Stars will still beat the level, but not increment the <u>Star Counter</u>. You should set an unique ID number per every star to make them increment the <u>Star Counter</u> even stars placed at the same section.<i>"
 image = "npc-97.png"
 algorithm = ""
 default-effect = 10
@@ -18,13 +18,17 @@ physical-height = 64
 physical-width = 64
 frame-style = 0
 frames = 4
-display-frame = 0
+display-frame = 1
 frame-delay = 100
 foreground = 0
 custom-animation = 0
 speed = 0
 container = 0
-custom-value-enabled = 0
+custom-value-enabled = 1
+custom-value-name = "Unique Star ID"
+custom-value-type = 1
+custom-value-spin-min = 0
+custom-value-spin-max = 65545
 score = 0
 moving = 0
 scenery = 0
