--- a/gameinfo.ini
+++ b/gameinfo.ini
@@ -58,27 +58,29 @@ game-credit-30="Gatete"
 game-credit-31="Astrakitu"
 game-credit-32="SamS1m0n"
 game-credit-33="MatiasNTRM"
-game-credit-34=""
-game-credit-35="Music:"
+game-credit-34="gbradley231"
+game-credit-35="Askywalker"
 game-credit-36=""
-game-credit-37="Mod Archive"
-game-credit-38="SMW Central"
-game-credit-39="Newgrounds Audio Portal"
-game-credit-40="OverClocked Remix"
-game-credit-41="VGMusic"
-game-credit-42=""
-game-credit-43="Sounds:"
+game-credit-37="Music:"
+game-credit-38=""
+game-credit-39="Mod Archive"
+game-credit-40="SMW Central"
+game-credit-41="Newgrounds Audio Portal"
+game-credit-42="OverClocked Remix"
+game-credit-43="VGMusic"
 game-credit-44=""
-game-credit-45="Yingchun Soul"
-game-credit-46="Yave Yu"
-game-credit-47="Hello"
-game-credit-48="VGMusic"
-game-credit-49=""
-game-credit-50="Special Thanks:"
+game-credit-45="Sounds:"
+game-credit-46=""
+game-credit-47="Yingchun Soul"
+game-credit-48="Yave Yu"
+game-credit-49="Hello"
+game-credit-50="VGMusic"
 game-credit-51=""
-game-credit-52="Skullgamer205"
-game-credit-53="Wohlstand"
-game-credit-54=""
-game-credit-55="\"Finally, Mushroom Kingdom was"
-game-credit-56="returned to peace by everyone's"
-game-credit-57="effort and battlings......\""
+game-credit-52="Special Thanks:"
+game-credit-53=""
+game-credit-54="Skullgamer205"
+game-credit-55="Wohlstand"
+game-credit-56=""
+game-credit-57="\"Finally, Mushroom Kingdom was"
+game-credit-58="returned to peace by everyone's"
+game-credit-59="effort and battlings......\""
