--- a/_Moondust Config Pack/group_tilesets/LevelTiles2.tsgrp.ini
+++ b/_Moondust Config Pack/group_tilesets/LevelTiles2.tsgrp.ini
@@ -2,7 +2,7 @@
 category=Level Tiles
 name=Tiles 2
 weight=2
-tilesets-count=9
+tilesets-count=10
 
 [tilesets]
 tileset-1=Tiles-Fields.tileset.ini
@@ -14,3 +14,4 @@ tileset-6=Tiles-Autumn.tileset.ini
 tileset-7=Tiles-Mountain.tileset.ini
 tileset-8=Tiles-Swamp.tileset.ini
 tileset-9=Tiles-Vase.tileset.ini
+tileset-10=Tiles-Log.tileset.ini
