--- a/_Moondust Config Pack/tilesets/Items-1.tileset.ini
+++ b/_Moondust Config Pack/tilesets/Items-1.tileset.ini
@@ -95,7 +95,7 @@ id=220
 id=217
 
 [item-4-4]
-id=221
+id=222
 
 [item-3-4]
 id=224
@@ -116,13 +116,13 @@ id=238
 id=250
 
 [item-5-4]
-id=274
+id=221
 
 [item-6-4]
-id=56
+id=274
 
 [item-7-4]
-id=31
+id=56
 
 [item-0-5]
 id=283
@@ -156,3 +156,9 @@ id=253
 
 [item-7-5]
 id=255
+
+[item-3-6]
+id=31
+
+[item-4-6]
+id=134
