--- a/editor.ini
+++ b/editor.ini
@@ -640,6 +640,7 @@ mus106-name = "Ship 2"
 [musfam-Set7]
 name = "Set 7"
 sort-index = 8
+mus107-name = "Normal 16"
 
 ;World Music
 
@@ -692,6 +693,7 @@ sort-index = 2
 name = "Items"
 sort-index = 3
 snd14-name = "Coin"
+snd56-name = "Ring"
 
 [sndfam-Enemy]
 name = "Enemy"
