--- a/_Moondust Config Pack/items/npc/npc-260.ini
+++ b/_Moondust Config Pack/items/npc/npc-260.ini
@@ -3,7 +3,7 @@ name = "Firebar"
 group = "Enemies"
 category = "Castle"
 description = "An obstacle that rotates around a pivot. The distance to the pivot is determined by the <u>firebar position</u> value. (ai1)"
-image = "npc-260.png"
+image = "npc-260e.png"
 algorithm = "firebar.lua"
 default-effect = 10
 shell-effect = 10
