--- a/music.ini
+++ b/music.ini
@@ -1,6 +1,6 @@
 [music-main]
-total-world=19
-total-level=113
+total-world=21
+total-level=120
 total-special=3
 level-custom-music-id=24
 world-custom-music-id=17
@@ -80,6 +80,14 @@ file="smh_-_on_the_moon.it"
 [world-music-19]
 name="Deep Seas"
 file="deep_seas.xm"
+
+[world-music-20]
+name="Sea Side"
+file="sea-side.mod"
+
+[world-music-21]
+name="Faerie Realm"
+file="faerie_realm.xm"
 
 [special-music-1]
 name="Monster Beat (P-Switch)"
@@ -410,8 +418,8 @@ name="One Fine Day"
 file="1fineday.xm"
 
 [level-music-80]
-name="Together Forever"
-file="together_forever.xm"
+name="Itzel 2"
+file="meztli_blue_-_itzel_2.it"
 
 [level-music-81]
 name="Jazzberry Juice Edit"
@@ -518,8 +526,8 @@ name="The Loneliness"
 file="the_loneliness.mod"
 
 [level-music-107]
-name="World-Like Music"
-file="ida_smwmusic.it"
+name="Another Rainbow"
+file="another_rainbow.xm"
 
 [level-music-108]
 name="Happy Synth"
@@ -530,8 +538,8 @@ name="Overworld"
 file="overworld.mod"
 
 [level-music-110]
-name="Fallen Sides"
-file="sil_falsid-loop.xm"
+name="Playmoland"
+file="playmoland.xm"
 
 [level-music-111]
 name="Spinning Around"
@@ -544,3 +552,31 @@ file="battleship-chess-2.xm"
 [level-music-113]
 name="Picking a Mushroom"
 file="picking_a_mushroom-nointro.xm"
+
+[level-music-114]
+name="Oasis"
+file="travolta_-_oasis.mod"
+
+[level-music-115]
+name="Titan #02"
+file="titan_02.xm"
+
+[level-music-116]
+name="Starry Beach"
+file="starry_beach.mod"
+
+[level-music-117]
+name="Tandemluftballong"
+file="loonie_-_tandemluftballong.xm"
+
+[level-music-118]
+name="Jumping Roofs"
+file="ub-roofs.it"
+
+[level-music-119]
+name="Focus on the Groove"
+file="focus_on_the_groove.xm"
+
+[level-music-120]
+name="Sun and Rain"
+file="sun_and_rain-loopedit.xm"
