--- a/.gitattributes
+++ b/.gitattributes
@@ -12,6 +12,9 @@ npc-*.txt text eol=crlf
 *.png binary
 *.jpg binary
 *.gif binary
+*.ico binary
+*.exe binary
+*.dll binary
 *.mp3 binary
 *.ogg binary
 *.xm binary
