--- a/_Moondust Config Pack/items/npc/npc-208.ini
+++ b/_Moondust Config Pack/items/npc/npc-208.ini
@@ -1,8 +1,8 @@
 [npc]
-name = "Glass Chamber"
-group = "Miscellaneous"
-category = "Boss"
-description = "A chamber that is commonly used as a shield for <b>Mother Brain</b>. Takes <u>five strong items</u> to be destroyed, upon which its contents are released."
+name = "Jewel-Block"
+group = "Items"
+category = "Blocks"
+description = "A block that made of crystal, which can contain <b>items</b>. It takes <u>five strong hits</u> to break."
 image = "npc-208.png"
 algorithm = "glass_chamber.lua"
 default-effect = 0
