--- a/_Moondust Config Pack/items/blocks/block-1.ini
+++ b/_Moondust Config Pack/items/blocks/block-1.ini
@@ -2,7 +2,7 @@
 image = "block-1.png"
 name = "Block (Outdoors)"
 group = "Outdoors"
-category = "Special Blocks"
+category = "Standard Blocks"
 description = "An ordinary block for outdoor sceneries."
 sizable = 0
 danger = 0
