--- a/_Moondust Config Pack/items/blocks/block-33.ini
+++ b/_Moondust Config Pack/items/blocks/block-33.ini
@@ -1,8 +1,8 @@
 [block]
 image = "block-33.png"
-name = "Mushroom Platform 4"
-group = "Platforms"
-category = "Mushroom"
+name = "Log"
+group = "Outdoors"
+category = "Log"
 sizable = 0
 danger = 0
 collision = 1
