--- a/_Moondust Config Pack/main.ini
+++ b/_Moondust Config Pack/main.ini
@@ -1,6 +1,6 @@
 [main]
 config_name = "Nostalgic Paradise"
-config_desc = "Nostalgic Paradise config pack for TheXTech engine"
+config_desc = "Config pack for Nostalgic Paradise. Powered by TheXTech engine."
 
 config-pack-id = "TheXTech"
 target-engine-name = "TheXTech"
