--- a/_Moondust Config Pack/items/blocks/block-34.ini
+++ b/_Moondust Config Pack/items/blocks/block-34.ini
@@ -1,8 +1,8 @@
 [block]
 image = "block-34.png"
-name = "Mushroom Platform 5"
-group = "Platforms"
-category = "Mushroom"
+name = "Dungeon Block (Outdoors)"
+group = "Outdoors"
+category = "Standard Blocks"
 sizable = 0
 danger = 0
 collision = 1
