--- a/_Moondust Config Pack/items/blocks/block-35.ini
+++ b/_Moondust Config Pack/items/blocks/block-35.ini
@@ -1,8 +1,8 @@
 [block]
 image = "block-35.png"
-name = "Mushroom Platform 5"
-group = "Platforms"
-category = "Mushroom"
+name = "Dungeon Block (Underground)"
+group = "Underground"
+category = "Standard Blocks"
 sizable = 0
 danger = 0
 collision = 1
