--- a/_Moondust Config Pack/items/npc/npc-102.ini
+++ b/_Moondust Config Pack/items/npc/npc-102.ini
@@ -1,5 +1,5 @@
 [npc]
-name = "Link"
+name = "Talking Flower"
 group = "Items"
 category = "NPCs"
 image = "npc-102.png"
@@ -9,15 +9,15 @@ default-effect = 10
 shell-effect = 10
 gfx-offset-x = 0
 gfx-offset-y = 2
-gfx-height = 64
+gfx-height = 32
 gfx-width = 32
 grid = 32
 grid-offset-x = 0
 grid-offset-y = 0
-physical-height = 64
+physical-height = 32
 physical-width = 32
-frame-style = 1
-frames = 1
+frame-style = 0
+frames = 2
 frame-delay = 128
 foreground = 0
 custom-animation = 0
